chore: build.gradle 의존성 및 버전 수정